--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </td>
                            <td  class="menu_superior">
                             <div ><a href="http://puyehue.ulagos.cl/cgi-bin/openwebmail/openwebmail.pl" class="link_sup" target="_blank">
-                                Correo Institucional </a>ffffffffffffff
+                                Correo Institucional </a>ffffffffffffffryh
                        
                         </td>
                         
