--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 
-	<title>INSTITUO EDUCACION CONTINUA - UNIVERSIDAD DE LOS LAGOS</title>
+	<title>INSTITUO EDUCACION CONTINUA - UNIVERSIDAD DE LOS TULA</title>
   
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/foundation.css">
